@@ -45,8 +45,3 @@ INFO:
     coefficient_of_thermal_expansion_1: 5.9e-06 K<sup>-1</sup>
     coefficient_of_thermal_expansion_2: 7.32e-06 K<sup>-1</sup>
     ΔP_gF: -0.0078
-    climatic_resistance: 1.0
-    stain_resistance: 1.0
-    acid_resistance: 51.4
-    alkali_resistance: 1.0
-    phosphate_resistance: 2.2
