@@ -41,8 +41,3 @@ INFO:
     coefficient_of_thermal_expansion_1: 8.99e-06 K<sup>-1</sup>
     coefficient_of_thermal_expansion_2: 1.113e-05 K<sup>-1</sup>
     ΔP_gF: 0.0104
-    climatic_resistance: 1.0
-    stain_resistance: 5.0
-    acid_resistance: 53.3
-    alkali_resistance: 2.3
-    phosphate_resistance: 2.3
